Added assets for antur including images and font First phase of building antur Various small changes and modifications to existing components in the portfolio home page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
   scroll-behavior: smooth;
 }
 
+#antur-header {
+  background-image: url('./assets/antur/img/snowdon-1.jpg');
+  background-size: cover;
+  background-position: center center;
+}
+
 #home-page-bg { 
   width: 100%;
   height: 100%;
